# wgg_notebooks

./: .env_example  .gitignore  .tool-versions  Fasttext_and_word2vec.ipynb  README.md  bert.ipynb  docker-compose.yml  guess_word_game.py  main.py  pyproject.toml  requirements.txt  test_main.py
.github/: pytest.yml
.github/workflows/: test.yml
api/app/: main.py
api/app/lib/: game.py  mongo_client.py
api/app/models/: nltk.py
api/lib/: game.py
api/models/: nltk.py
api/tests/: test_main.py
api/tests/lib/: test_game.py  test_mongo_client.py
app/models/: word_corpus.py
app/models/nlp/: gensim.py  nltk.py  word_corpus.py
app/use_cases/: console_interface.py
app/use_cases/games/: guess_word_game.py
deploy/: Dockerfile.api  Dockerfile.frontend  Dockerfile.mongo  Dockerfile.nginx  deploy.sh
deploy/mongo/: init.js
deploy/nginx/: backend.conf  frontend.conf
docker/: run_tests.sh
frontend/: package-lock.json
frontend/src/: Routes.js
frontend/src/components/: navBar.js
frontend/src/config/: settings.js
frontend/src/pages/: about.js  home.js  layout.js  notFound.js
frontend_app/: .env_example  package-lock.json  package.json
frontend_app/public/: env.js  index.html
frontend_app/src/: App.js  index.js  index.scss
model_inference_api/: api.py  schemas.py  utils.py
model_inference_api/app/: api.py  utils.py
model_inference_api/lib/: mongo_client.py
model_inference_api/tests/: test_api.py
script/: run_api_dev.sh  run_front_dev.sh  start_api.sh  start_frontend.sh  test.sh
test/fixtures/: fake_word_corpus.py
(+16 files in other folders)
